ui: prevent video posters from stretching in LightGallery

--- a/style/main.css
+++ b/style/main.css
@@ -359,6 +359,7 @@ body.selection-mode .tile-selector {
     padding: 0 !important;
 }
 
+.lg-video-cont img,
 .lg-video-object,
 .lg-has-html5 video,
 .lg-video-cont video,
